# controllers/auth.go
@@ -10,6 +10,16 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
+// Auth godoc
+// @Schemes
+// @Description Registrasi Account
+// @Tags Auth
+// @Accept x-www-form-urlencoded
+// @Produce json
+// @Param email formData string true "Input Email"
+// @Param password formData string true "Input Password"
+// @Success 200 {object} Response
+// @Router /auth/register [post]
 func AuthRegister(ctx *gin.Context) {
 	var form models.Users
 	ctx.ShouldBind(&form)
@@ -83,6 +93,16 @@ func AuthRegister(ctx *gin.Context) {
 	}
 }
 
+// Auth godoc
+// @Schemes
+// @Description Login Account
+// @Tags Auth
+// @Accept x-www-form-urlencoded
+// @Produce json
+// @Param email formData string true "Input Email"
+// @Param password formData string true "Input Password"
+// @Success 200 {object} Response
+// @Router /auth/login [post]
 func AuthLogin(ctx *gin.Context) {
 	var form models.Users
 	ctx.ShouldBind(&form)
