# controllers/movies.go
@@ -26,7 +26,7 @@ import (
 // @Param page query int false "Page Movie"
 // @Param limit query int false "Limit Movie"
 // @Param sort query string false "Sort Movie"
-// @Success 200 {object} Response{results=models.ListMovie}
+// @Success 200 {object} Response{results=models.ListAllMovie}
 // @Router /movies [get]
 func GetAllMovies(ctx *gin.Context) {
 	search := ctx.DefaultQuery("search", "")
@@ -37,7 +37,7 @@ func GetAllMovies(ctx *gin.Context) {
 		sortmovie = "DESC"
 	}
 
-	var movies models.ListMovie
+	var movies models.ListAllMovie
 	var count int
 	get := lib.Redis().Get(context.Background(), ctx.Request.RequestURI)
 	getCount := lib.Redis().Get(context.Background(),
@@ -80,7 +80,7 @@ func GetAllMovies(ctx *gin.Context) {
 	}
 	ctx.JSON(200, Response{
 		Success: true,
-		Message: "See All Users",
+		Message: "View All Movie",
 		PageInfo: PageInfo{
 			CurentPage: page,
 			NextPage:   nextPage,
@@ -92,15 +92,45 @@ func GetAllMovies(ctx *gin.Context) {
 	})
 }
 
-// Update Movie godoc
+// Detail Movie godoc
 // @Schemes
-// @Description  Updated Movies
+// @Description Detail Movies
+// @Tags Movies
+// @Accept json
+// @Produce json
+// @Param id path int true "Detail Movie"
+// @Success 200 {object} Response{results=models.MoviesNoTag}
+// @Router /movies/{id} [get]
+func GetMoviesById(ctx *gin.Context) {
+	id, _ := strconv.Atoi(ctx.Param("id"))
+	find := models.FindOneMovie(id)
+
+	ctx.JSON(http.StatusOK, Response{
+		Success: true,
+		Message: "Detail Movie",
+		Results: find,
+	})
+
+}
+
+// Edit Movie godoc
+// @Schemes
+// @Description Edit Movies
 // @Tags Movies
 // @Accept x-www-form-urlencoded
 // @Produce json
-// @Param Edit_Movie formData models.Movie_body true "Edit Movie"
-// @Success 200 {object} Response{results=models.Movie_Data}
-// @Router /movies/:id [get]
+// @Param id path int true "Id Movie"
+// @Param tittle formData string true "Edit tittle"
+// @Param genre formData string true "Update genre"
+// @Param Image formData file true "Update Image"
+// @Param synopsis formData string true "Update Synopsis"
+// @Param author formData string true "Update Author"
+// @Param actors formData string true "Update Actors"
+// @Param release_date formData string true "Update Realease Date"
+// @Param duration formData string true "Update Duration"
+// @Param tag formData string true "Update Tag"
+// @Success 200 {object} Response{results=models.Movie_body}
+// @Router /movies/{id} [patch]
 func EditMovie(ctx *gin.Context) {
 	paramId, _ := strconv.Atoi(ctx.Param("id"))
 	movie := models.FindOneMovie(paramId)
@@ -159,38 +189,24 @@ func EditMovie(ctx *gin.Context) {
 	})
 }
 
-func GetDetailMoviesById(ctx *gin.Context) {
-	id, _ := strconv.Atoi(ctx.Param("id"))
-	find := models.FindDetailMovie(id)
-
-	ctx.JSON(http.StatusOK, Response{
-		Success: true,
-		Message: "You Get Movie By ID",
-		Results: find,
-	})
-
-}
-func GetMoviesById(ctx *gin.Context) {
-	id, _ := strconv.Atoi(ctx.Param("id"))
-	find := models.FindOneMovie(id)
-
-	ctx.JSON(http.StatusOK, Response{
-		Success: true,
-		Message: "You Get Movie By ID",
-		Results: find,
-	})
-
-}
-
 // Add Movie godoc
 // @Schemes
 // @Description Add Movies
 // @Tags Movies
 // @Accept x-www-form-urlencoded
 // @Produce json
-// @Param Edit_Movie formData models.Movie_body true "Add New Movie"
-// @Success 200 {object} Response{results=models.Movie_Data}
-// @Router /movies/:id [post]
+// @Param id path int true "Id Movie"
+// @Param tittle formData string true "Edit tittle"
+// @Param genre formData string true "Update genre"
+// @Param Image formData file true "Update Image"
+// @Param synopsis formData string true "Update Synopsis"
+// @Param author formData string true "Update Author"
+// @Param actors formData string true "Update Actors"
+// @Param release_date formData string true "Update Realease Date"
+// @Param duration formData string true "Update Duration"
+// @Param tag formData string true "Update Tag"
+// @Success 200 {object} Response{results=models.MoviesbyTag}
+// @Router /movies [post]
 func SaveMovies(ctx *gin.Context) {
 	var formData models.Movie_body
 	text := ctx.ShouldBind(&formData)
@@ -233,15 +249,15 @@ func SaveMovies(ctx *gin.Context) {
 	})
 }
 
-// Add Movie godoc
+// Delete Movie godoc
 // @Schemes
-// @Description  Delete One Movie
+// @Description Delete Movies
 // @Tags Movies
 // @Accept json
 // @Produce json
-// @Param id query string true "Delete Movie"
-// @Success 200 {object} Response{results=models.ListMovie}
-// @Router /movies/:id [delete]
+// @Param id path int true "Delete Movie"
+// @Success 200 {object} Response{results=models.MoviesbyTag}
+// @Router /movies/{id} [delete]
 func DeleteMovie(ctx *gin.Context) {
 	id, _ := strconv.Atoi(ctx.Param("id"))
 	deleted := models.DeleteMovie(id)
